# scientific-python-utils

./: README.md  pyproject.toml
dev/: merge_overlapping_by_voting.ipynb  test_overlapping.ipynb  test_overlapping_geofileops.ipynb
scientific_python_utils/: constants.py  geometric.py  geospatial.py
spatial_utils/: geofileops_wrappers.py  geometric.py  geospatial.py
