[project]
name = "scientific-python-utils"
version = "0.1.0"
description = "Scientific computing utilities shared across Open Forest Observatory Python projects"
authors = [
    {name = "David Russell",email = "djrussell@ucdavis.edu"}
]
license = {text = "GPL3"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "geopandas (>=1.0.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
